gitops/infrastructure/envoy-gateway/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.1.234
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home"
      tls:
        mode: Terminate
        certificateRefs:
        - name: homelab-wildcard-tls
          kind: Secret
          group: ""
      allowedRoutes:
        namespaces:
          from: All
